Router/css/index.css
html {
    overflow-y: scroll;
}

body {
    background-color: rgb(245, 246, 248);
    font-family: "微软雅黑", Helvetica, Tahoma, Arial, SimSun, Heiti, "黑体", sans-serif;
    font-size: 12px;
    line-height: 1.5;
    color: #2B3238;
}

.nav-bar {
    top: 0;
    position: fixed;
    width: 100%;
    min-width: 1004px;
    height: 55px;
    background-color: rgb(38, 38, 38);
}

.nav-bar .container {
    width: 1004px;
    margin: 0 auto;
    padding: 0 10px;
}

.nav-logo {
    float: left;
    height: 20px;
    margin-top: 20px;
}

.nav-link li {
    height: 14px;
    padding: 0 8px;
    float: left;
    border-right: 1px solid #A3A3A3;
}

.nav-link li:last-child {
    border-right: none;
}

.nav-link li a {
    color: #A3A3A3;
    text-decoration: none;
}

.nav-link {
    line-height: 14px;
    font-size: 14px;
    float: right;
    margin-top: 22px;
    margin-right: -1px;
}

.nav-pages {
    margin-top:6px;
    margin-left: 55px;
    float: left;
}

.nav-pages li {
    font-size: 14px;
    line-height: 44px;
    padding: 0 18px 5px;
    margin: 0 2px;
    float: left;
}

.nav-pages li a {
    color: #A3A3A3;
    text-decoration: none;
}

.current {
    background-color: rgb(245, 246, 248);
    border-radius: 6px 6px 0px 0px;
}

.current a {
    color: black !important;
}

.article {
    width: 100%;
    padding-top:75px;
}

.clear-fix:before,
.clear-fix:after {
    content: " ";
    display: table;
}
.clear-fix:after {
    clear:both;
}
.clear-fix {
    *zoom:1;
}

.content {
    margin: 0 auto;
    width: 1004px;
}

.left-container {
    margin-top: 20px;
    float: left;
    width: 260px;
    height: 495px;
    background: url("../image/router_info_bg.png") repeat-x scroll #5A9CE6;
    border-radius: 2px;
}

.left-container div {
    text-align: center;
    width: 100%;
}

.left-container .run-info {
    height: 50px;
    color: #FFFFFF;
    font-size: 16px;
    line-height: 50px;
}

.left-container .run-info .router-run-day {
    margin: 0 10px;
    color: #DFB850;
}

.left-container .speed-info {
    color: #FFFFFF;
    height: 100%;
    padding: 55px 0;
}

.left-container .speed-info .router-down-speed {
    height: 30%;
    position: relative;
}

.left-container .speed-info .router-down-speed .router-down-speed-value {
    font-size: 90px;
    line-height: 90px;
    text-shadow: 0 5px 5px rgba(0, 0, 0, 0.15);
}

.router-down-speed-unit {
    font-size: 14px;
}

.router-down-speed-title {
    font-size: 12px;
    margin: 10px 0;
}

.right-container {
    margin-top: 20px;
    float: left;
    width: 744px;
    height: 495px;
    overflow: hidden;
}

.right-container >div {
    margin-left: 20px;
}

.right-top-container {
    height: 130px;
    border-bottom: 1px solid #DCDCDC;
}

.network-info {
    height: 130px;
    font-size: 18px;
    height: 60px;
    background: url("../image/router_status_ok.png") no-repeat left center;
    position: relative;
    padding: 35px 0 35px 60px;
    margin-right: 7px;
    border-bottom: 1px solid #DCDCDC;
}

.network-info .button-index-check {
    position: absolute;
    display: block;
    background: #48CFAD;
    top: 45px;
    right: 1px;
    height: 40px;
    width: 140px;
    font-size: 16px;
}

.network-info p {
    line-height: 55px;
    padding-left: 10px;
    font-size: 28px;
}

.network-info p .info {
    font-size: 24px;
}

.app-list {
    min-width: 365px;
    width: 100%;
    margin-top: 24px;
}

.app-list ul li {
    float: left;
    width: 32%;
    margin: 0 5px 20px 0;
}

.app-list ul li .menu-item{
    position: relative;
    width: 205px;
    height: 140px;
    border-radius: 1px;
    padding: 20px 0 0 20px;
    margin: 0 auto;
    overflow: hidden;
}

.app-list ul li .menu-item .title {
   position: absolute;
    top: 26px;
    left:20px;
    font-size: 22px;
    line-height: 22px;
    color:#FFF;
    text-shadow: 0px 1px 0px rgba(0,0,0,0.2);
}

.dev_list_app {
    background: url("../image/icon_dev_list.png") right bottom no-repeat #FFB71B;
}

.dev_list_app .dev_list_online_num {
    color: #FFF;
    position: absolute;
    right: 17px;
    bottom: 10px;
    text-align: center;
}

.dev_list_app .dev_list_online_num .dev_list_online_num_value {
    font-size:55px;
    line-height:55px;
    text-shadow: 0px 1px 0px rgba(0,0,0,0.2);
}

.dev_list_app .dev_list_online_num .dev_list_online_des{
    margin-top: 2px;
    font-size:14px;
    line-height:14px;
}

.wifi_protect_app {
    background: url("../image/icon_wifi_protected.png") right bottom no-repeat #A0D468;
}

.wifi_set_app {
    background: url("../image/icon_wifi_set.png") right bottom no-repeat #48CFAD;
}

.wan_set_app {
    background: url("../image/icon_wan_set.png") right bottom no-repeat #4FC1E9;
}

.friends_net_app {
    background: url("../image/icon_friends_net.png") right bottom no-repeat #ED5565;
}

.smart_home_app {
    background: url("../image/icon_smart_home.png") right bottom no-repeat #AC92EC;
}

.footer {
    clear: both;
    text-align: center;
}

.copyright {
    padding: 35px 0 20px;
    color: #818181;
    font-family: Arial;
}

.os {
    display: inline-block;
    margin: 0 auto;
    padding: 0 15px;
    line-height: 30px;
    border-radius: 45px;
    color: #999999;
    border: 1px solid #E3E3E5;
}

